feat(member): modules setting